# foodserv

./: .gitignore  .gitignore.location_parsing  GIT-CHEATSHEET.md  Makefile  README.md  banner_idea.cpp  cgi_main.cpp  conf_test.conf  default.config  flow.txt  listen_main.cpp  local_main.cpp  location_main.cpp  main.cpp  makefile.txt  nginx_main.cpp  request  server_selection_main.cpp  test.cpp  tmp_makefile  tmp_nginx_main.cpp  webserv
HTML/: index.html  otherpage.html
basic_server/: main.cpp  server-side.cpp  server.cpp  server.hpp  socket.cpp  socket.hpp
bug_reports/: bug_report_image_upload.md
cgi-bin/: cpp.cgi  get_query.pl  not_executable.pl  post_query.pl  test.cgi  test.py  upload.pl
config/: CONFIG.md  FindBlocks.hpp  LocationBlock.cpp  LocationBlock.hpp  ServerBlock.hpp  complex.conf  default.conf  listen.cpp  location_block.cpp  location_block.hpp  location_block_validation.cpp  mandatories.mD  nginx_config.cpp  nginx_config.hpp  nginx_default.conf  old_nginx_config.cpp  server_block.cpp  server_block.hpp  server_name.hpp
config/additional_info/: nginx_tester.conf
config/config_test_files_missing_components/: missing_client_max_body_size.conf  missing_http.conf  missing_index.conf  missing_root.conf  missing_server.conf
config/config_test_files_misspelling/: misspelled_client_max_body_size.conf  misspelled_http.conf  misspelled_listen.conf  misspelled_server.conf
config/misc/: CONFIG.md  mandatories.mD
config_files/: CGI_test.conf  complex.conf  conf_test.conf  default.conf  default2.conf  default_single.conf  double_port.conf  multiple_servers.conf  nginx_tester.conf  simple.conf  test.conf
config_files/bad_config_files/: bad_input  double_CMBS  double_alias.conf  double_allowed_methods.conf  double_cgi.conf  double_index  double_listen  double_location  double_root  double_server_name  location_error_autoindex  location_error_cgi_pass  location_error_cmbs  location_error_fastcgi_pass  location_error_index  location_error_misspelling  location_error_return  location_error_root  missing_client_max_body_size.conf  missing_error.conf  missing_index.conf  missing_listen.conf  missing_root.conf  misspelled_client_max_body_size.conf  misspelled_error.conf  misspelled_index.conf  misspelled_listen.conf  misspelled_root.conf  misspelled_server.conf  open_brackets.conf  outside_server.conf
config_files/cgi_testers/: 1_arg_invalid_path.conf  2_arg_invalid_path.conf  CGI_GET.conf  CGI_test.conf
config_files/config_test_files_missing_components/: missing_error.conf  missing_listen.conf
config_files_sanne/: default.conf  test1.conf
docs/: flow.txt  request-response_flow.txt
docs/cgi_info/: cgi.mD  (+2 more)
google_test/cgi_post_test_no_get/: CMakeLists.txt  cgi_argv_envp.cpp  try_test.cpp
google_test/cgi_post_test_no_get/cgi-bin/: test.cgi
google_test/cgi_post_test_no_get/config_files/cgi_testers/: CGI_POST4.conf  CGI_POST5.conf  CGI_POST8.conf
google_test/cgi_test/: CMakeLists.txt  factorial.cpp  gotest.sh  nginx_config.cpp  try_test.cpp
google_test/cgi_test/cgi-bin/: post_query.pl
google_test/cgi_test/config_files/cgi_testers/: CGI_GET3.conf  CGI_GET4.conf  CGI_GET7.conf  CGI_GET8.conf  CGI_POST.conf
google_test/google_test_example/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  print_string.cpp  print_string.hpp
google_test/index_test/: CMakeLists.txt  try_test.cpp
google_test/nginx/: CMakeLists.txt  build_out  gotest.sh  nginx_config.cpp  try_test.cpp
google_test/nginx/bad_config_files/: double_autoindex  double_errorpage.conf  double_index  double_location  double_misspelled_server.conf  double_return  location_error_index  location_error_misspelling  missing_client_max_body_size.conf  missing_error.conf  misspelled_client_max_body_size.conf  misspelled_error.conf  misspelled_index.conf  misspelled_listen.conf  outside_server.conf  root_alias.conf  server_double_errorpage.conf
google_test/nginx/config_files/: empty_location_block.conf  multiple_servers.conf
google_test/request_test/: CMakeLists.txt  default.conf  gtest_request_chunked.cpp  gtest_request_field.cpp  gtest_request_header.cpp  gtest_request_line.cpp  gtest_request_message.cpp  gtest_request_target.cpp  gtest_uri_host.cpp
google_test/resolved_path_test/: CMakeLists.txt  gotest.sh  try_test.cpp
google_test/resolved_path_test/config_files/: alias.conf  return.conf  root.conf
google_test/resolved_path_test/www/html/: get_cgi.html  index.html  otherpage.html  upload.html
google_test/resolved_path_test/www/html/coffee_and_beans/: get_cgi.html  post_cgi.html
google_test/resolved_path_test/www/html/css/: basic_css.css
google_test/resolved_path_test/www/html/error/: 404.html  502.html
google_test/resolved_path_test/www/html/food/: breakfast.html  index.html  lunch.html  post_cgi.html
google_test/resolved_path_test/www/upload/: delete_me.txt
google_test/response_test/: CMakeLists.txt  default.conf  gotest.sh  gtest_connection.cpp  gtest_response_delete.cpp  gtest_response_error.cpp  gtest_response_expect.cpp  gtest_response_get.cpp  gtest_response_index.cpp  gtest_response_post.cpp  gtest_response_redirect.cpp  gtest_response_timeout.cpp  index.conf  redirect.conf
google_test/response_test/html/error/: custom_error_test.html
google_test/server_selection_test/: CMakeLists.txt  config_ideas.conf  nginx_config.cpp  try_test.cpp
google_test/server_selection_test/test_config/: alias.conf  conf4.conf  root.conf
google_test_example/: CMakeCache.txt
google_tests/: main.cpp
html/: get_cgi.html  index.html  index_tmp.html  otherpage.html  post_cgi.html
src/: utils.cpp  utils.hpp
src/request/testing/: CMakeLists.txt  default.conf  gotest.sh  gtest_request_chunked.cpp  gtest_request_field.cpp  gtest_request_header.cpp  gtest_request_line.cpp  gtest_request_message.cpp  gtest_request_target.cpp  gtest_uri_host.cpp  request_field.cpp  request_header.cpp  request_line.cpp  request_target.cpp  request_test.cpp  uri_host.cpp
test_config/: alias.conf  conf1.conf  conf2.conf  conf3.conf  conf4.conf  location1.conf  location2.conf  return.conf  root.conf
(+368 files in other folders)
